--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.1",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.7",
+    "moment-timezone": "^0.5.46",
     "mysql2": "^3.11.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/axios": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
